architecture updateЭ